--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "nuxt-app",
-  "private": true,
+  "name": "frankzinsli",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@types/node": "^18.17.3",
-    "nuxt": "^3.6.5"
+  "dependencies": {
+    "astro": "^3.1.0"
   }
 }
