--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
       "@pages/*": [
         "src/pages/*"
       ],
+      "@layouts/*": [
+        "src/layouts/*"
+      ],
       "@styles/*": [
         "src/styles/*"
       ]
