--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.1.0"
+    "@astrojs/prefetch": "^0.4.0",
+    "astro": "^3.2.0",
+    "sass": "^1.68.0"
   }
 }
