--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/prefetch": "^0.4.0",
-    "astro": "^3.2.0",
+    "@astrojs/vue": "^3.0.0",
+    "astro": "^3.2.2",
     "sass": "^1.68.0",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "vue": "^3.3.4"
   }
 }
