--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@astrojs/prefetch": "^0.4.1",
-    "@astrojs/vue": "^3.0.2",
-    "astro": "^3.4.0",
+    "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/vue": "^3.0.3",
+    "astro": "^3.4.3",
+    "astro-robots-txt": "^1.0.0",
     "sass": "^1.69.5",
     "swiper": "^10.3.1",
     "vue": "^3.3.7"
+  },
+  "devDependencies": {
+    "astro-compress": "2.2.3"
   }
 }
