--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with:
-          server: // TODO insert your ftp server name
-          username: // TODO insert yor ftp user name
+          server: ${{ secrets.ftp_server }}
+          username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
           local-dir: ./dist/
           server-dir: // TODO insert the server directory you want your files to be deployed
