--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,28 +6,28 @@ name: Deploy website on push
 
 jobs:
   web-deploy:
-    name: Deploy
+    name: Deploy frankzinsli.ch
     runs-on: ubuntu-latest
     steps:
-      - name: Get latest code
+      - name: Checkout latest code
         uses: actions/checkout@v2
 
-      - name: Use Node.js 18
+      - name: Set Node.js 18
         uses: actions/setup-node@v2
         with:
           node-version: '18'
 
-      - name: Build Project
+      - name: Install yarn & build
         run: |
           yarn install
           yarn build
 
-      - name: Sync files
+      - name: Upload files via FTP
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with:
           server: ${{ secrets.ftp_server }}
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
           local-dir: ./dist/
-          server-dir: ./httpdocs/
+          server-dir: /httpdocs
           dangerous-clean-slate: true
